--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body> 
     <nav class="navbar">
         <ul class="nav-list">
-            <li> <a href="http://127.0.0.1:5500/form/form.html">Form</a></li>
-            <li> <a href="http://127.0.0.1:5500/table/table.html">Table</a></li>
-            <li> <a href="http://127.0.0.1:5500/media/media.html">Media</a></li>
+            <li> <a href="./form.html">Form</a></li>
+            <li> <a href="./table.html">Table</a></li>
+            <li> <a href="./media.html">Media</a></li>
         </ul>
     </nav>
     <div class="container">
