--- a/media.html
+++ b/media.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Page</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="media.css">
 </head>
 <body class="media">
     <img src="mp/mp.jpg" alt="" width="150" height="270">
