--- a/media.html
+++ b/media.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="media.css">
 </head>
 <body class="media">
-    <img src="mp/mp.jpg" alt="" width="150" height="270">
+    <img src="./Asset/Mide.jpg" alt="" width="150" height="270">
     <video controls width="150" class="video">
-        <source src="mp/mv.mp4" alt="" width="1000" height="500">
+        <source src="Asset/MV.mp4" alt="" width="1000" height="500">
     </video>
     <audio controls class="audio">
-        <source src="mp/audio.unknown" type="audio/mpeg">
+        <source src="./Asset/My AYO.unknown" type="audio/mpeg">
     </audio>
 </body>
 </html>
