--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
     <div class="left-container">
       <img src="./Alt image.jpg" alt="Illustration" />
       <h1>Learn highly sought after </br>skills without hassle.</h1>
-      <div class="social-icons">
+      <div class="socials">
         <a href="https://x.com/altschoolafrica"><i class="fa-brands fa-x-twitter"></i></a>
         <a href="https://www.instagram.com/altschoolafrica/"><i class="fa-brands fa-square-instagram"></i></a>
         <a href="https://web.facebook.com/AltSchoolAfrica?_rdc=1&_rdr"><i class="fa-brands fa-facebook"></i></a>
@@ -24,7 +24,7 @@
       </div>
       <p class="footer">2025 &copy; AltSchool Africa. All rights reserved.</p>
     </div>
-
+   
     <div class="right-container">
       <p class="signin-text">Already an Altschooler? <a href=""> Sign In!</a></p>
       <h2>Signup</h2>
